Added action for fetch a single coin

--- a/src/components/Main/layout/style.module.scss
+++ b/src/components/Main/layout/style.module.scss
@@ -30,3 +30,9 @@
     background-color: $headerColor;
   }
 }
+
+.tableRow:hover {
+  background-color: $modalBackgroundColor;
+  color: $whiteColor;
+  cursor: pointer;
+}
