Created new reducer for coin portfolio and added return to table

--- a/src/components/Header/layout/style.module.scss
+++ b/src/components/Header/layout/style.module.scss
@@ -8,16 +8,23 @@
   font-family: $headerFont;
   font-size: $fontSize;
   background-color: $headerColor;
+  color: $whiteColor;
+  cursor: pointer;
 
   .popularCoins {
     display: flex;
 
     .coin {
-      margin-right: 10px;
+      margin: 0 10px;
     }
   }
 
   .portfolio {
     cursor: pointer;
+    transition: .3s;
+  }
+
+  .portfolio:hover {
+    color: #d2d2d2;
   }
 }
