--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -1,4 +1,4 @@
-$headerColor: cornflowerblue;
+$headerColor: #577abf;
 $tableHeadColor: #007180;
 $modalBackgroundColor: rgba(0, 0, 0, .4);
 $whiteColor: white;
