--- a/src/components/singleCoin/layout/style.module.scss
+++ b/src/components/singleCoin/layout/style.module.scss
@@ -1,7 +1,25 @@
+@import "../../../styles/colors";
+
 .fields {
   margin: 50px auto;
 
   .field {
     display: flex;
   }
+}
+
+button {
+  float: end;
+  padding: 10px 15px;
+
+  border: none;
+  border-radius: 5px;
+  background-color: $headerColor;
+  color: $whiteColor;
+  cursor: pointer;
+  transition: .2s;
+}
+
+button:hover {
+  background-color: #3b5880;
 }
