Created logic for deleting portfolio coins

--- a/src/components/PortfolioModal/style.module.scss
+++ b/src/components/PortfolioModal/style.module.scss
@@ -37,6 +37,14 @@
   }
 }
 
+.empty {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  height: 100%;
+}
+
 .hide {
   display: none;
 }
